[gd_scene load_steps=4 format=3 uid="uid://beafsrqi3rc6p"]

[ext_resource type="Script" path="res://Cars/CarInterior.gd" id="1_6enyo"]
[ext_resource type="Texture2D" uid="uid://02yq2a28w4xb" path="res://Sprites/1/7.jpg" id="2_gdlm2"]
[ext_resource type="PackedScene" uid="uid://bph5l6v1wjfk0" path="res://MarkCircle.tscn" id="3_6w2nj"]

[node name="CarInterior" type="Node2D"]
position = Vector2(304, 232)
script = ExtResource("1_6enyo")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gdlm2")

[node name="Button" type="Button" parent="."]
offset_left = -284.0
offset_top = -210.0
offset_right = -224.0
offset_bottom = -179.0
text = "Back"

[node name="MarkCircle" parent="." instance=ExtResource("3_6w2nj")]
position = Vector2(-93, -91)
scale = Vector2(0.5, 0.5)

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="input_event" from="MarkCircle" to="." method="_on_mark_circle_input_event"]
